--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
         <li><a href="/index/{{ field }}">Field Map</a></li>
         {% endif %}
         <li><a href="/leaderboard">Leaderboard</a></li>
-        <!-- <li><a href="/user_reg">Pair UID</a></li> -->
+        <li><a href="/pair_uid">Pair UID</a></li>
         <li><a href="/node_admin">Node Admin</a></li>
         <li><a href="/comms">Comms Log</a></li>
     </ul>
