cleanup node admin node table

--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -187,13 +187,13 @@
                 {% for node in node_status %}
                 <tr class="row">
 
-                    <td> {{ node.node                              | safe }} </td>
-                    <td> {{ node.location                          | safe }} </td>
-                    <td> {{ cmd_dict[node.config]                  | safe }} </td>
-                    <td> {{ print_time((node.cap_time or 0) * 10)  | safe }} </td>
-                    <td> {{ print_time((node.med_time or 0) * 10)  | safe }} </td>
-                    <td> {{ print_time((node.bomb_time or 0) * 10) | safe }} | {{ print_time((node.arm_time or 0) * 10) | safe }} | {{ print_time((node.diff_time or 0) * 10) | safe }} </td>
-                    <td> {{ print_perc(node.cap_asst)              | safe }} </td>
+                    <td> {{ node.node[8:]                   | safe }} </td>
+                    <td> {{ node.location                   | safe }} </td>
+                    <td> {{ cmd_dict[node.config]           | safe }} </td>
+                    <td> {{ print_time(node.cap_time * 10)  | safe }} </td>
+                    <td> {{ print_time(node.med_time * 10)  | safe }} </td>
+                    <td> {{ print_time(node.bomb_time * 10) | safe }} | {{ print_time(node.arm_time * 10) | safe }} | {{ print_time(node.diff_time * 10) | safe }} </td>
+                    <td> {{ print_perc(node.cap_asst)       | safe }} </td>
 
                 </tr>
                 {% endfor %}
