--- a/static/css/main.css
+++ b/static/css/main.css
@@ -116,7 +116,6 @@ h2 {
     text-decoration: none;
     /* background-color: var(--button_color); */
     font-size: 125%;
-    border-radius: 0.1em;
     color: var(--BLACK);
 }
 #main-nav li a:hover {
@@ -124,13 +123,26 @@ h2 {
     box-shadow: 0 0 1em rgba(255, 255, 255, 0.25);
     transform: scale(1.05);
     color: var(--BLACK);
-    border-bottom: solid var(--BLACK) 2px;
 }
 
 #main-nav li a:active {
     box-shadow: 0 0 0.5em rgba(255, 255, 255, 0.25);
     transform: scale(0.98);
     border-bottom: solid var(--RED) 4px;
+}
+
+#main-nav li:after {
+  content: '';
+  display: block;
+  margin: auto;
+  height: 4px;
+  width: 0px;
+  background: transparent;
+  transition: width .5s ease, background-color .5s ease;
+}
+#main-nav li:hover:after {
+  width: 100%;
+  background: var(--BLACK);
 }
 
 .grid_container {
