--- a/templates/pair_uid.html
+++ b/templates/pair_uid.html
@@ -7,14 +7,14 @@
 
     <form name="Pair_UID"
           method="post"
-          action="{{ url_for('registration.assign_uid') }}">
+          action="{{ url_for('pair_uid.assign_uid') }}">
 
     <select name="player" id="player">
         {% for player in Players %}
-        <option value={{  player['id']  }}>
+        <option value={{  player.id  }}>
             {{  player.lastname  }},
             {{  player.firstname  }} &emsp; &emsp;
-            uid: {{ player.uid }}
+            <div style="float:right">uid: {{ player.uid }}</div>
         </option>
         {% endfor %}
     </select>
