--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -143,7 +143,7 @@
                     <td> {{ print_time(node.med_time * 10)  | safe }} </td>
                     <td> {{ print_time(node.bomb_time * 10) | safe }} | {{ print_time(node.arm_time * 10) | safe }} | {{ print_time(node.diff_time * 10) | safe }} </td>
                     <td> {{ print_perc(node.cap_asst)       | safe }} </td>
-                    <td> {{ node.point_scale/60.            | safe }} x </td>
+                    <td> {{ (node.point_scale/60)           | safe }} x </td>
                     <td> {{ node.allow_medic                | safe }} </td>
 
                 </tr>
