--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -161,6 +161,7 @@
     <text x="50%" y="39%" text-anchor="middle" style="font-size: 80%"> {{ team_name[nd.team] if nd.team else 'No one' }}'s </text>
     <text x="50%" y="52.5%" text-anchor="middle"> {{ nd.location or nd.node }} </text>
     <text x="50%" y="66%" text-anchor="middle" style="font-size: 80%"> {{ print_time(node_times[nd][nd.team] or 0) }} </text>
+    <text x="50%" y="77.5%" text-anchor="middle" style="font-size: 80%"> {{ (node_times[nd][nd.team] or 0) // nd.point_scale }}pts</text>
 
     </svg>
 
