redo how to fix the divide by zero

--- a/templates/player_profile.html
+++ b/templates/player_profile.html
@@ -20,7 +20,7 @@
     Assigned to operations @ {{ uid.field or '_ _ _ _ _'}}. <br/>
     <br/>
     Objectives held by team: <br/>
-    
+
     {% if team %}
         {% for node in team.nodes %}
         {{ node.location or node.node }} <br/>
@@ -34,13 +34,13 @@
 
 {% set cap = user.captures or 0 %}
 {% set ass = user.assists or 0 %}
-{% set pts = ((cap * 2) + ass) or 1 %}
+{% set pts = (cap * 2) + ass %}
 
 {% set rad = 50 %}
 {% set circ = rad * 2 * 3.14159 %}
 
-{% set perc_cap = cap*2/pts %}
-{% set perc_ass = ass/pts %}
+{% set perc_cap = cap*2/(pts or 1) %}
+{% set perc_ass = ass/(pts or 1) %}
 {% set perc_pts = pts  %}
 
 {% set stroke_w = rad / 4 %}
