allow users to update profile information (not password or callsign)

--- a/templates/register.html
+++ b/templates/register.html
@@ -17,9 +17,15 @@
             {{render_field(form.firstname)}}
             {{render_field(form.lastname)}}
             {{render_field(form.email)}}
-            {{render_field(form.callsign)}}
-            {{render_field(form.password)}}
-            {{render_field(form.confirm)}}
+
+            {% if not current_user.is_authenticated %}
+            
+                {{render_field(form.callsign)}}
+                {{render_field(form.password)}}
+                {{render_field(form.confirm)}}
+
+            {% endif %}
+
             {{render_field(form.image)}}
             {{ form.submit() }}
         </dl>
