--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
       <li><a href="/login">Login</a></li>
     {% else %}
       <li><a href="/player_profile/{{ current_user.callsign }}">My Profile</a></li>
+      <li><a href="/register"> Update profile </a></li>
       <li><a href="/logout">Logout</a></li>
     {% endif %}
 </ul>
