--- a/templates/player_profile.html
+++ b/templates/player_profile.html
@@ -116,5 +116,14 @@
 
 </div>
 
+<br/><br/>
+
+<ul class="nav" style="font-size: 80%">
+    <li><a href="/register"> Update profile </a></li>
+    <li><a href="/update_password"> Change Password </a></li>
+    <li><a href="/update_callsign"> Change Callsign </a></li>
+    <li><a href="/logout">Logout</a></li>
+</ul>
+
 
 {% endblock %}
