fix broken class labeling

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -16,7 +16,7 @@
 </input>
 </div>
 
-<ul class="tab" id="main-nav">
+<ul class="tab nav">
   <li onclick="show_table(event, 'team_score')" id="defaultOpen"><a class="tablink">Team Score</a></li>
   <li onclick="show_table(event, 'location_score')"><a class="tablink" >Location Stats</a></li>
   <li onclick="show_table(event, 'player_score')"><a class="tablink" >Player Score</a></li>
