--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
 <head>
 
-  <title> SkirMesh - Battlefield </title>
+  <title> SkirMesh </title>
   <meta charset="UTF-8">
   <meta name={{ author }}
         content="Results earned here.">
@@ -73,7 +73,7 @@
 <center>
 
     <footer style="align:center;">
-        &copy; Copyright 2020 - 2021 SkirMesh Gaming
+        &copy; Copyright 2020 - 2021 SkirMesh
     </footer>
 
 </center>
