--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -68,7 +68,7 @@
 
           </div>
 
-          <br>
+          <br/>
 
           <center>
 
@@ -77,7 +77,7 @@
                  type="button"
                  name="action"
                  value="Issue Command"
-                 onclick="form_submit(this.value)"
+                 onclick="form_submit(this)"
                  {% if not cmd_dict %}
                  style="display:none"
                  {% endif %}>
@@ -87,8 +87,12 @@
                  id="end_game_button"
                  type="button"
                  name="action"
-                 value="End Game"
-                 onclick="form_submit(this.value)"
+                 {% if is_paused %}
+                    value="Resume Game"
+                 {% else %}
+                    value="Pause Game"
+                 {% endif %}
+                 onclick="form_submit(this)"
                  {% if not cmd_dict %}
                  style="display:none"
                  {% endif %}>
@@ -99,7 +103,7 @@
                 type="button"
                 name="action"
                 value="Start Game"
-                onclick="form_submit(this.value)"
+                onclick="form_submit(this)"
                 {% if not cmd_dict %}
                 style="display:none"
                 {% endif %}>
@@ -110,7 +114,7 @@
                  type="button"
                  name="action"
                  value="Discover Network"
-                 onclick="form_submit(this.value)"
+                 onclick="form_submit(this)"
                  {% if cmd_dict %}
                  style="display:none"
                  {% endif %}>
