make name just salina_gambit

--- a/templates/field_chooser.html
+++ b/templates/field_chooser.html
@@ -12,13 +12,17 @@
     BALLAHACK
 </a>
 
-<a class="field_link" id="ballahack" href="/index/salina_gambit_A">
+<a class="field_link" id="ballahack" href="/index/salina_gambit">
+    BALLAHACK<br>Salina Gambit (B)
+</a>
+
+<!-- <a class="field_link" id="ballahack" href="/index/salina_gambit_A">
     BALLAHACK<br>Salina Gambit (A)
 </a>
 
 <a class="field_link" id="ballahack" href="/index/salina_gambit_B">
     BALLAHACK<br>Salina Gambit (B)
-</a>
+</a> -->
 
 <br>
 
