add JSON file for team values

--- a/templates/field_chooser.html
+++ b/templates/field_chooser.html
@@ -13,7 +13,7 @@
 </a>
 
 <a class="field_link" id="ballahack" href="/index/salina_gambit">
-    BALLAHACK<br>Salina Gambit (B)
+    BALLAHACK<br>Salina Gambit
 </a>
 
 <!-- <a class="field_link" id="ballahack" href="/index/salina_gambit_A">
