Added about page to website. Still needs styling and a lot of love

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,8 @@
         <li><a href="/pair_uid">Pair UID</a></li>
         <li><a href="/node_admin">Node Admin</a></li>
         <li><a href="/comms">Comms Log</a></li>
+        <li><a href="/about">About</a></li>
+
     </ul>
 
 
